syntax = "proto3";

option go_package = "grpc/proto";

message Product {
    string sku = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    string brand = 5;
    double price = 6;
    string imageUrl = 7;
    string merchantId = 8;
}

message NewProduct {
    string name = 1;
    string description = 2;
    string category = 3;
    string brand = 4;
    double price = 5;
    string imageUrl = 6;
}

message GetProductInput {
    string sku = 1;
}

service ProductService {
    rpc AddProduct (NewProduct) returns (Product);
    rpc GetProduct(GetProductInput) returns (Product);
}